install boostrap 4.6, jquery, popper js and font awesome in dependencies local, fix navbar searcher position, list menus refactor in object, add isCollapse in ilstVisible, validators beta 1

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,5 +1,6 @@
 .component-container {
   height: 94vh;
+  overflow: auto;
   // white-space: nowrap;
 }
 
@@ -12,7 +13,9 @@
 }
 
 .work-area-container {
-  overflow: auto;
+  min-width: 30%;
+  overflow-y: auto;
+  overflow-x: hidden;
 }
 
 #btn_collaps_all {
